# dilipredict

./: .bash_history  .coveragec  README.md  README_SETUP.md  demo.py  pytest.ini  requirements.txt  requirements_updated.txt  setup.cfg
.github/workflows/: release.yml  test.yml
data/sample_data/D00/: D00_A2_113792_original.tiff  D00_A2_113842_original.tiff  D00_A2_113892_original.tiff  D00_A2_113942_original.tiff  D00_A2_113992_original.tiff  D00_A2_114092_original.tiff  D00_A2_114142_original.tiff  D00_A2_114192_original.tiff  D00_A2_114242_original.tiff  D00_A2_114292_original.tiff
data/sample_data/D01/: D01_A2_113642_original.tiff  D01_A2_113692_original.tiff  D01_A2_113792_original.tiff  D01_A2_113842_original.tiff  D01_A2_113892_original.tiff  D01_A2_113942_original.tiff  D01_A2_113992_original.tiff  D01_A2_114042_original.tiff  D01_A2_114092_original.tiff  D01_A2_114142_original.tiff
data/sample_data/D02/: D02_A2_113542_original.tiff  D02_A2_113642_original.tiff  D02_A2_113692_original.tiff  D02_A2_113792_original.tiff  D02_A2_113842_original.tiff  D02_A2_113892_original.tiff  D02_A2_113942_original.tiff  D02_A2_113992_original.tiff  D02_A2_114042_original.tiff  D02_A2_114092_original.tiff
data/sample_data/D03/: D03_A2_113642_original.tiff  D03_A2_113692_original.tiff  D03_A2_113792_original.tiff  D03_A2_113842_original.tiff  D03_A2_113892_original.tiff  (+5 more)
dilipredict/: datasets.py  image_loader.py  models.py  pipelines.py
dilipredict/nets/: __init__.py  beitv2.py
tests/: conftest.py  test_nets.py  test_piplines.py
tests/data/: test_img.tiff
