[bdist_wheel]
python-tag = py3

[metadata]
name = dilipredict
version = attr: dilipredict._version.__version__
author = qiuyin zhang
author_email = zhangqiuyin@ish.org.cn
description = DILI predict
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AI, deep learning, dili
license_files =
    LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    tests*

[options.package_data]
dilipredict = data/*.json, data/*.txt
